# OpenQuant

./: CMakeLists.txt  README.md  note.md
input/: gen_input.py  input.json  log  rho0.real
scripts/: armadillo.py  bath.py  bath2.py  bath3.py  bath_generator.py  bath_lfld.py  gen_input.py  syst.py  test_bath_imag.py  test_bath_real.py  unitconverter.py
src/apps/: corr.cpp  rhot.cpp
src/deom/: CMakeLists.txt  deom.hpp  deomAlgebra.cpp  deomBath.hpp  deomConst.hpp  deomCopyright.cpp  deomEqSolverProp.cpp  deomEqSolverScit.cpp  deomHidx.hpp  deomPropagation.cpp  deomPulse.hpp  deomRem.cpp  deomSyst.hpp
